--- a/pyproject.toml
+++ b/pyproject.toml
@@ -23,7 +23,9 @@ dependencies = [
     "wandb (>=0.19.6,<0.20.0)",
     "jupyter (>=1.1.1,<2.0.0)",
     "ipykernel (>=6.29.5,<7.0.0)",
-    "einops (>=0.8.1,<0.9.0)"
+    "einops (>=0.8.1,<0.9.0)",
+    "diffusers (>=0.32.2,<0.33.0)",
+    "torchinfo (>=1.8.0,<2.0.0)"
 ]
 
 
@@ -33,3 +35,9 @@ build-backend = "poetry.core.masonry.api"
 
 [tool.poetry]
 packages = [{ include = "src" }]
+
+[tool.black]
+line-length = 88
+
+[tool.isort]
+profile = "black"
