--- a/configs/config.ini
+++ b/configs/config.ini
@@ -2,7 +2,7 @@
 dataset_name = None
 dataset_path = data/raw/
 
-output_dir = trained_models/ddpm-model-64.pth
+output_dir = trained_models/
 samples_dir = test_samples/
 loss_logs_dir = training_logs
 cache_dir = None
