--- a/configs/config.ini
+++ b/configs/config.ini
@@ -9,7 +9,7 @@ cache_dir = None
 logging_dir = logs
 pretrained_model_path = None
 
-                                                                                                                           = 32
+resolution = 64
 hidden_dims = [64, 128, 256]
 n_timesteps = 1000
 n_inference_timesteps = 250
@@ -17,7 +17,7 @@ use_flash_attn = True
 
 train_batch_size = 16
 eval_batch_size = 16
-num_epochs = 1
+num_epochs = 5
 save_model_steps = 1000
 gradient_accumulation_steps = 1
 learning_rate = 0.0001
