--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ dependencies = [
     "ipykernel (>=6.29.5,<7.0.0)",
     "einops (>=0.8.1,<0.9.0)",
     "diffusers (>=0.32.2,<0.33.0)",
-    "torchinfo (>=1.8.0,<2.0.0)"
+    "torchinfo (>=1.8.0,<2.0.0)",
+    "requests (>=2.32.3,<3.0.0)"
 ]
 
 
