model is training with embeddings

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -1,6 +1,7 @@
 [settings]
 dataset_name = None
 dataset_path = data/raw/
+metadata_path = data/metadata/
 
 output_dir = trained_models/
 samples_dir = test_samples/
