Try to train for real

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -17,16 +17,16 @@ use_flash_attn = True
 
 train_batch_size = 4
 eval_batch_size = 4
-num_epochs = 5
-save_model_steps = 5000
+num_epochs = 10
+save_model_steps = 2000
 gradient_accumulation_steps = 2
-learning_rate = 0.0001
+learning_rate = 0.001
 lr_scheduler = cosine
-lr_warmup_steps = 100
+lr_warmup_steps = 500
 adam_beta1 = 0.9
 adam_beta2 = 0.99
 adam_weight_decay = 0.0
-use_clip_grad = False
-fp16_precision = False
+use_clip_grad = True
+fp16_precision = True
 gamma = 0.996
 guidance_scale = 1.0
