reconfigure model for larger images

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -9,8 +9,8 @@ loss_logs_dir = training_logs
 cache_dir = None
 logging_dir = logs
 pretrained_model_path = None
-resolution = 64
-hidden_dims = [64, 128, 256]
+resolution = 128
+hidden_dims = [16, 32, 64, 128]
 n_timesteps = 1000
 n_inference_timesteps = 250
 use_flash_attn = True
