CPU offloading allows bigger models

--- a/configs/config.ini
+++ b/configs/config.ini
@@ -2,20 +2,20 @@
 dataset_name = None
 dataset_path = data/raw/
 metadata_path = data/metadata/
-
+pre_trained_model_path = trained_models/checkpoint_4_12500.pth
 output_dir = trained_models/
 samples_dir = test_samples/
 loss_logs_dir = training_logs
 cache_dir = None
 logging_dir = logs
-resolution = 256
-hidden_dims = [16, 32, 32]
+resolution = 64
+hidden_dims = [32, 64, 128, 256]
 n_timesteps = 500
 n_inference_timesteps = 100
 use_flash_attn = True
 
-train_batch_size = 1
-eval_batch_size = 1
+train_batch_size = 64
+eval_batch_size = 64
 num_epochs = 5
 save_model_steps = 2500
 gradient_accumulation_steps = 4
